@@ -31,8 +31,8 @@
         <remarks>The definition of device units is dependent on the output device; it will typically be pixels for a screen, and points for a printer. This is currently 1024, but this may be changed in the future. When setting font sizes, device units are always considered to be points (as in "12 point font"), rather than pixels.</remarks>
       </Docs>
     </Member>
-    <Member MemberName="XX_Small">
-      <MemberSignature Language="C#" Value="public static double XX_Small;" />
+    <Member MemberName="XXSmall">
+      <MemberSignature Language="C#" Value="public static double XXSmall;" />
       <MemberType>Field</MemberType>
       <ReturnValue>
         <ReturnType>System.Double</ReturnType>
@@ -43,8 +43,8 @@
         <remarks />
       </Docs>
     </Member>
-    <Member MemberName="X_Small">
-      <MemberSignature Language="C#" Value="public static double X_Small;" />
+    <Member MemberName="XSmall">
+      <MemberSignature Language="C#" Value="public static double XSmall;" />
       <MemberType>Field</MemberType>
       <ReturnValue>
         <ReturnType>System.Double</ReturnType>
@@ -91,8 +91,8 @@
         <remarks />
       </Docs>
     </Member>
-    <Member MemberName="X_Large">
-      <MemberSignature Language="C#" Value="public static double X_Large;" />
+    <Member MemberName="XLarge">
+      <MemberSignature Language="C#" Value="public static double XLarge;" />
       <MemberType>Field</MemberType>
       <ReturnValue>
         <ReturnType>System.Double</ReturnType>
@@ -103,8 +103,8 @@
         <remarks />
       </Docs>
     </Member>
-    <Member MemberName="XX_Large">
-      <MemberSignature Language="C#" Value="public static double XX_Large;" />
+    <Member MemberName="XXLarge">
+      <MemberSignature Language="C#" Value="public static double XXLarge;" />
       <MemberType>Field</MemberType>
       <ReturnValue>
         <ReturnType>System.Double</ReturnType>
@@ -123,6 +123,54 @@
       <Docs>
         <summary>Default constructor</summary>
         <returns>an object of type <see cref="T:Pango.Scale" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="XX_Small" Deprecated="true">
+      <MemberSignature Language="C#" Value="public static double XX_Small;" />
+      <MemberType>Field</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Double</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Obsolete alias for <see cref="F:Pango.Scale.XXSmall" />.</summary>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="X_Small" Deprecated="true">
+      <MemberSignature Language="C#" Value="public static double X_Small;" />
+      <MemberType>Field</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Double</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Obsolete alias for <see cref="F:Pango.Scale.XSmall" />.</summary>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="X_Large" Deprecated="true">
+      <MemberSignature Language="C#" Value="public static double X_Large;" />
+      <MemberType>Field</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Double</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Obsolete alias for <see cref="F:Pango.Scale.XLarge" />.</summary>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="XX_Large" Deprecated="true">
+      <MemberSignature Language="C#" Value="public static double XX_Large;" />
+      <MemberType>Field</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Double</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Obsolete alias for <see cref="F:Pango.Scale.XXLarge" />.</summary>
         <remarks />
       </Docs>
     </Member>
