@@ -18,17 +18,28 @@
 // Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 // Boston, MA 02111-1307, USA.
 
+using System;
+
 namespace Pango {
 	
 	public sealed class Scale {
 		public static readonly double PangoScale = 1024.0;
 
-		public static readonly double XX_Small = 0.5787037037037;
-		public static readonly double X_Small = 0.6444444444444;
+		public static readonly double XXSmall = 0.5787037037037;
+		public static readonly double XSmall = 0.6444444444444;
 		public static readonly double Small = 0.8333333333333;
 		public static readonly double Medium = 1.0;
 		public static readonly double Large = 1.2;
-		public static readonly double X_Large = 1.4399999999999;
-		public static readonly double XX_Large = 1.728;
+		public static readonly double XLarge = 1.4399999999999;
+		public static readonly double XXLarge = 1.728;
+
+		[Obsolete ("Replaced by XXSmall")]
+		public static readonly double XX_Small = XXSmall;
+		[Obsolete ("Replaced by XSmall")]
+		public static readonly double X_Small = XSmall;
+		[Obsolete ("Replaced by XLarge")]
+		public static readonly double X_Large = XLarge;
+		[Obsolete ("Replaced by XXLarge")]
+		public static readonly double XX_Large = XXLarge;
 	}
 }
