@@ -1,3 +1,7 @@
+2005-04-04  Dan Winship  <danw@novell.com>
+
+	* en/Pango/Scale.xml: update
+
 2005-04-01  Dan Winship  <danw@novell.com>
 
 	* en/Gdk/Pixbuf.xml: 
