@@ -1,3 +1,11 @@
+2005-04-04  Dan Winship  <danw@novell.com>
+
+	* pango/Scale.cs: rename the size constants to not have
+	underscores in their names (and add obsolete aliases for the old
+	names).
+
+	* sample/GtkDemo/DemoTextView.cs: use the new names
+
 2005-04-04  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Gtk.metadata : mark all the call scope callback params to quiet
